hard-gists/5015483/run.log
=== Docker Run Log for 5015483 ===
Started at: Mi 29. Okt 15:18:59 CET 2025

[2025-10-29 15:18:59] START: Running container for 5015483
[2025-10-29 15:19:00] SUCCESS: Container 83d489b273f9345e861bab9c94f497e63848c056deb84c7f5136ef5dcf22b84c started for 5015483
=== Container logs for 5015483 ===
  File "/snippet.py", line 49
    print odbPath
    ^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5015483 ===
[2025-10-29 15:19:02] INFO: Container 83d489b273f9345e861bab9c94f497e63848c056deb84c7f5136ef5dcf22b84c has stopped
